--- a/templates/dashboard/components/drawers/read_drawer.html
+++ b/templates/dashboard/components/drawers/read_drawer.html
@@ -259,7 +259,7 @@
                                 </svg>
 
 
-                                <span class="text-gray-900 dark:text-white">sarah.j</span>
+                                <span class="text-gray-900 dark:text-white">{{ lead.username }}</span>
                             </div>
                             <div class="flex items-center gap-2">
                                 <svg class="w-6 h-6 text-gray-800 dark:text-gray-300" aria-hidden="true"
