--- a/templates/dashboard/leads.html
+++ b/templates/dashboard/leads.html
@@ -220,25 +220,41 @@
                                         </td>
                                         <th scope="row"
                                             class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white">
-                                            <img class="w-8 h-8 rounded-full"
+                                            <img class="w-8 h-8 rounded"
                                                 src="https://flowbite.com/docs/images/people/profile-picture-5.jpg"
                                                 alt="user photo">
-                                            <div class="ps-2">
+                                            <div class="ps-1">
                                                 <div class="text-base font-semibold">{{ lead.name }}</div>
-                                                <div class="font-normal text-gray-500">{{ lead.email }}</div>
+                                                <div class="font-normal text-gray-500">{{ lead.username }}</div>
                                             </div>
                                         </th>
                                         <td class="px-4 py-3">
                                             <span
                                                 class="inline-flex items-center border border-gray-200 text-grey-900 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-gray-800 dark:text-white dark:border-gray-600">
-                                                {{ lead.source }}
+                                                {{ lead.source|title }}
                                             </span>
                                         </td>
-                                        <td class="px-4 py-3"><span
-                                                class="inline-flex items-center bg-red-100 text-red-800 text-xs font-medium px-2.5 py-0.5 rounded-full dark:bg-red-900 dark:text-red-300">
+
+                                        <td class="px-4 py-3">
+                                            {% if lead.category == 'hot' %}
+                                            <span
+                                                class="inline-flex items-center bg-red-100 text-red-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-red-900 dark:text-red-300">
                                                 <span class="w-2 h-2 me-1 bg-red-500 rounded-full"></span>
-                                                {{ lead.category }}
+                                                {{ lead.category|title }}
                                             </span>
+                                            {% elif lead.category == 'warm' %}
+                                            <span
+                                                class="inline-flex items-center bg-yellow-100 text-yellow-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-yellow-900 dark:text-yellow-300">
+                                                <span class="w-2 h-2 me-1 bg-yellow-500 rounded-full"></span>
+                                                {{ lead.category|title }}
+                                            </span>
+                                            {% else %}
+                                            <span
+                                                class="inline-flex items-center bg-blue-100 text-blue-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300">
+                                                <span class="w-2 h-2 me-1 bg-blue-500 rounded-full"></span>
+                                                {{ lead.category|title }}
+                                            </span>
+                                            {% endif %}
                                         </td>
                                         <td class="px-4 py-3">{{ lead.sentiment_score|floatformat:0 }}</td>
                                         <td class="px-4 py-3">{{ lead.engagement_score|floatformat:0 }}</td>
