--- a/templates/dashboard/components/drawers/read_drawer.html
+++ b/templates/dashboard/components/drawers/read_drawer.html
@@ -321,7 +321,7 @@
                     </div>
 
                     <div class="flex bottom-0 left-0 justify-center pb-4 space-x-4 w-full">
-                        <button type="button"
+                        <button type="button" onclick="window.open('{{ lead.get_direct_message_url }}', '_blank')"
                             class="text-white w-full inline-flex items-center justify-center bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
                             <svg class="w-5 h-5 mr-1.5 -ml-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                                 width="24" height="24" fill="none" viewBox="0 0 24 24">
