--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -12,7 +12,7 @@
 
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
-
+    <script src="{% static 'js/htmx.js' %}"></script>
 
     <script>
 
@@ -25,7 +25,7 @@
 
 </head>
 
-<body class="bg-gray-50 dark:bg-gray-800">
+<body class=" bg-gray-50 dark:bg-gray-800">
     {% block content %}
     {% endblock content %}
     <script src="{% static 'js/tabs.js' %}"></script>
