--- a/templates/dashboard/leads.html
+++ b/templates/dashboard/leads.html
@@ -111,7 +111,8 @@
                                         </div>
                                         <input type="text" hx-get="{% url 'leads:search_leads' %}"
                                             hx-trigger="input changed delay:100ms, search" hx-target="#leads-listing"
-                                            id="simple-search" placeholder="Search leads" required="" name="search"
+                                            id="lead-search-input" placeholder="Search leads" name="search"
+                                            value="{{ search_query }}"
                                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500">
                                     </div>
                                 </form>
@@ -172,66 +173,7 @@
                         </div>
 
 
-                        {% if leads.has_other_pages %}
-                        <nav class="flex flex-col items-start justify-between p-4 space-y-3 md:flex-row md:items-center md:space-y-0"
-                            aria-label="Table navigation">
-                            <span class="text-sm font-normal text-gray-500 dark:text-gray-400">
-                                Showing
-                                <span class="font-semibold text-gray-900 dark:text-white">
-                                    {{ leads.start_index }}-{{ leads.end_index }}</span>
-                                of
-                                <span class="font-semibold text-gray-900 dark:text-white">
-                                    {{ leads.paginator.count }}</span>
-                            </span>
-                            <ul class="inline-flex items-stretch -space-x-px">
-                                {% if leads.has_previous %}
-                                <li>
-                                    <a href="?page={{ leads.previous_page_number }}"
-                                        class="flex items-center justify-center h-full py-1.5 px-3 ml-0 text-gray-500 bg-white rounded-l-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
-                                        <span class="sr-only">Previous</span>
-                                        <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd"
-                                                d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
-                                                clip-rule="evenodd" />
-                                        </svg>
-                                    </a>
-                                </li>
-                                {% endif %}
 
-                                {% for i in leads.paginator.page_range %}
-                                {% if leads.number == i %}
-                                <li>
-                                    <a href="#" aria-current="page"
-                                        class="z-10 flex items-center justify-center px-3 py-2 text-sm leading-tight border text-primary-600 bg-primary-50 border-primary-300 hover:bg-primary-100 hover:text-primary-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white">
-                                        {{ i }}</a>
-                                </li>
-                                {% else %}
-                                <li>
-                                    <a href="?page={{ i }}"
-                                        class="flex items-center justify-center px-3 py-2 text-sm leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
-                                        {{ i }}</a>
-                                </li>
-                                {% endif %}
-                                {% endfor %}
-
-                                {% if leads.has_next %}
-                                <li>
-                                    <a href="?page={{ leads.next_page_number }}"
-                                        class="flex items-center justify-center h-full py-1.5 px-3 leading-tight text-gray-500 bg-white rounded-r-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
-                                        <span class="sr-only">Next</span>
-                                        <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd"
-                                                d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-                                                clip-rule="evenodd" />
-                                        </svg>
-                                    </a>
-                                </li>
-                                {% endif %}
-                            </ul>
-                        </nav>
-                        {% endif %}
                     </div>
 
                 </div>
