--- a/templates/dashboard/leads.html
+++ b/templates/dashboard/leads.html
@@ -1,4 +1,5 @@
 {% extends "dashboard/base.html" %}
+{% load lead_filters %}
 
 {% block content %}
 
@@ -140,7 +141,7 @@
 
                                 <div class="flex items-center space-x-3 w-full md:w-auto">
                                     <button id="actionsDropdownButton" data-dropdown-toggle="actionsDropdown"
-                                        class="w-full md:w-auto flex items-center justify-center py-2 px-4 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
+                                        class="w-full md:w-auto flex items-center justify-center py-2 px-4 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
                                         type="button">
                                         Actions
                                         <svg class="-mr-1 ml-1.5 w-5 h-5" fill="currentColor" viewbox="0 0 20 20"
@@ -253,41 +254,23 @@
 {% include 'dashboard/components/drawers/edit_lead_drawer.html' %}
 
 <div id="filterDropdown" class="z-20 hidden px-3 pt-1 bg-white rounded-lg shadow w-80 dark:bg-gray-700 right-0">
-    <div class="flex items-center justify-between pt-2">
+    <div class="flex items-center justify-between pt-2 mb-2">
         <h6 class="text-sm font-medium text-black dark:text-white">Filters</h6>
         <div class="flex items-center space-x-3">
-            <a href="#"
-                class="flex items-center text-sm font-medium text-primary-600 dark:text-primary-500 hover:underline">Save
-                view</a>
             <a href="#"
                 class="flex items-center text-sm font-medium text-primary-600 dark:text-primary-500 hover:underline">Clear
                 all</a>
         </div>
     </div>
-    <div class="pt-3 pb-2">
-        <label for="input-group-search" class="sr-only">Search</label>
-        <div class="relative">
-            <div class="absolute inset-y-0 left-0 flex items-center pl-4 pointer-events-none">
-                <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" fill="currentColor"
-                    viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                        d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
-                        clip-rule="evenodd" />
-                </svg>
-            </div>
-            <input type="text" id="input-group-search"
-                class="block w-full p-2 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                placeholder="Search keywords...">
-        </div>
-    </div>
+
     <div id="accordion-flush" data-accordion="collapse" data-active-classes="text-black dark:text-white"
         data-inactive-classes="text-gray-500 dark:text-gray-400">
-        <!-- Category -->
-        <h2 id="category-heading">
+        <!-- Source -->
+        <h2 id="source-heading">
             <button type="button"
                 class="flex items-center justify-between w-full py-2 px-1.5 text-sm font-medium text-left text-gray-500 border-b border-gray-200 dark:border-gray-600 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-700"
-                data-accordion-target="#category-body" aria-expanded="true" aria-controls="category-body">
-                <span>Category</span>
+                data-accordion-target="#source-body" aria-expanded="true" aria-controls="source-body">
+                <span>Source</span>
                 <svg aria-hidden="true" data-accordion-icon="" class="w-5 h-5 rotate-180 shrink-0" fill="currentColor"
                     viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd"
@@ -295,76 +278,27 @@
                 </svg>
             </button>
         </h2>
-        <div id="category-body" class="hidden" aria-labelledby="category-heading">
+
+        <div id="source-body" class="hidden" aria-labelledby="source-heading">
             <div class="py-2 font-light border-b border-gray-200 dark:border-gray-600">
                 <ul class="space-y-2">
+                    {% for value, label in platform_choices %}
                     <li class="flex items-center">
-                        <input id="apple" type="checkbox" value=""
+                        <input id="platform-{{ value }}" type="checkbox" value="{{ value }}"
                             class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
-                        <label for="apple" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">Apple
-                            (56)</label>
+                        <label for="platform-{{ value }}"
+                            class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
+                            {{ label }}
+                            {% with count=leads|filter_by_platform:value|length %}
+                            ({{ count }})
+                            {% endwith %}
+                        </label>
                     </li>
-                    <li class="flex items-center">
-                        <input id="microsoft" type="checkbox" value=""
-                            class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
-                        <label for="microsoft"
-                            class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">Microsoft
-                            (45)</label>
-                    </li>
-                    <li class="flex items-center">
-                        <input id="logitech" type="checkbox" value="" checked=""
-                            class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
-                        <label for="logitech" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">Logitech
-                            (97)</label>
-                    </li>
-                    <li class="flex items-center">
-                        <input id="sony" type="checkbox" value=""
-                            class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
-                        <label for="sony" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">Sony
-                            (234)</label>
-                    </li>
-                    <li class="flex items-center">
-                        <input id="asus" type="checkbox" value="" checked=""
-                            class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
-                        <label for="asus" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">Asus
-                            (97)</label>
-                    </li>
-                    <li class="flex items-center">
-                        <input id="dell" type="checkbox" value=""
-                            class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
-                        <label for="dell" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">Dell
-                            (56)</label>
-                    </li>
-                    <li class="flex items-center">
-                        <input id="msi" type="checkbox" value=""
-                            class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
-                        <label for="msi" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">MSI
-                            (97)</label>
-                    </li>
-                    <li class="flex items-center">
-                        <input id="canon" type="checkbox" value="" checked=""
-                            class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
-                        <label for="canon" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">Canon
-                            (49)</label>
-                    </li>
-                    <li class="flex items-center">
-                        <input id="benq" type="checkbox" value=""
-                            class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
-                        <label for="benq" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">BenQ
-                            (23)</label>
-                    </li>
-                    <li class="flex items-center">
-                        <input id="razor" type="checkbox" value=""
-                            class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500">
-                        <label for="razor" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">Razor
-                            (49)</label>
-                    </li>
-                    <a href="#"
-                        class="flex items-center text-sm font-medium text-primary-600 dark:text-primary-500 hover:underline">View
-                        all</a>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
+
         <!-- Price -->
         <h2 id="price-heading">
             <button type="button"
