Implement Lead filtering functionality

--- a/templates/dashboard/components/leads/lead_items.html
+++ b/templates/dashboard/components/leads/lead_items.html
@@ -31,7 +31,7 @@
                     </div>
                 </td>
                 <th scope="row" class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white">
-                    <img class="w-8 h-8 rounded" src="https://flowbite.com/docs/images/people/profile-picture-5.jpg"
+                    <img class="w-8 h-8 rounded-lg" src="https://flowbite.com/docs/images/people/profile-picture-5.jpg"
                         alt="user photo">
                     <div class="ps-2">
                         <div class="text-base font-semibold">{{ lead.name }}</div>
