--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -22,6 +22,11 @@
             document.documentElement.classList.remove('dark')
         }
     </script>
+    <script>
+        htmx.onLoad(function (content) {
+            initFlowbite();
+        });
+    </script>
 
 </head>
 
