--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -27,13 +27,13 @@
             initFlowbite();
         });
     </script>
-
 </head>
 
 <body class=" bg-gray-50 dark:bg-gray-800">
     {% block content %}
     {% endblock content %}
     <script src="{% static 'js/tabs.js' %}"></script>
+    <script src="{% static 'js/leads.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
 </body>
 
