--- a/templates/dashboard/components/leads/lead_items.html
+++ b/templates/dashboard/components/leads/lead_items.html
@@ -13,6 +13,7 @@
                 <th scope="col" class="px-4 py-3">Lead</th>
                 <th scope="col" class="px-4 py-3">Source</th>
                 <th scope="col" class="px-4 py-3">Status</th>
+                <th scope="col" class="px-4 py-3">Lead Category</th>
                 <th scope="col" class="px-4 py-3">Sentiment Score</th>
                 <th scope="col" class="px-4 py-3">Engagement Score</th>
                 <th scope="col" class="px-4 py-3">
@@ -45,6 +46,27 @@
                     </span>
                 </td>
 
+                <td class="px-4 py-3">
+                    {% if lead.category == 'hot' %}
+                    <span
+                        class="inline-flex items-center bg-red-100 text-red-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-red-900 dark:text-red-300">
+                        <span class="w-2 h-2 me-1 bg-red-500 rounded-full"></span>
+                        {{ lead.category|title }}
+                    </span>
+                    {% elif lead.category == 'warm' %}
+                    <span
+                        class="inline-flex items-center bg-yellow-100 text-yellow-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-yellow-900 dark:text-yellow-300">
+                        <span class="w-2 h-2 me-1 bg-yellow-500 rounded-full"></span>
+                        {{ lead.category|title }}
+                    </span>
+                    {% else %}
+                    <span
+                        class="inline-flex items-center bg-blue-100 text-blue-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300">
+                        <span class="w-2 h-2 me-1 bg-blue-500 rounded-full"></span>
+                        {{ lead.category|title }}
+                    </span>
+                    {% endif %}
+                </td>
                 <td class="px-4 py-3">
                     {% if lead.category == 'hot' %}
                     <span
