--- a/templates/dashboard/leads.html
+++ b/templates/dashboard/leads.html
@@ -26,7 +26,7 @@
                     </div>
 
                     <div class="flex flex-col sm:flex-row gap-2 w-full md:w-auto">
-                        <button type="button"
+                        <button type="button" id="createLeadButton" data-modal-toggle="createLeadModal"
                             class="w-full sm:w-auto text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center justify-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
                             <svg class="w-4 h-4 text-white dark:text-white me-2" aria-hidden="true"
                                 xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
@@ -248,6 +248,7 @@
 
 </div>
 
+{% include 'dashboard/components/drawers/add_lead.html' %}
 {% include 'dashboard/components/drawers/read_drawer.html' %}
 {% include 'dashboard/components/drawers/delete_modal.html' %}
 {% include 'dashboard/components/drawers/edit_lead_drawer.html' %}
